# myUtilities

./: README.md  actor.h5  afl_hash32.py  angr.ipynb  config_ss.sh  downloadBctf.ipynb  driller_main_analyse.py  fuzzTnnproto.py  netron.ipynb  python_queue.ipynb  regex.ipynb  seaborn.ipynb  test.ipynb  z3.ipynb
LLVMPass/llvm-pass-skeleton/: .a.dot  CMakeLists.txt  cfg.a.dot  cfg.main.dot  test  test-afl  test-afl-clang  test-afl-clang.ll  test.c  test.ll
LLVMPass/llvm-pass-skeleton/PASS_LOG/: test.c_log
LLVMPass/llvm-pass-skeleton/after_pass/: cfg.a.dot  cfg.main.dot  test.ll
LLVMPass/llvm-pass-skeleton/collectCMP/: CMakeLists.txt  CollectCMP.cpp  SanCovTraceCmp.bc  SanCovTraceCmp.c  SanCovTraceCmp.cpp  SanCovTraceCmp.ll  build.sh  cmp_res  final  final.bc  final.s  main  main.bc  main.ll  main.s  test-afterpass.bc  test.bc  test.ll
LLVMPass/llvm-pass-skeleton/collectCMP/catdoc/: SanCovTraceCmp.bc  catdoc.bc  final  final.bc  final.ll  final.s  main.bc  record
LLVMPass/llvm-pass-skeleton/collectCMP/final/: cfg._Z26__sanitizer_cov_trace_cmp1hh.dot  cfg._Z26__sanitizer_cov_trace_cmp2tt.dot  cfg._Z26__sanitizer_cov_trace_cmp4jj.dot  cfg._Z26__sanitizer_cov_trace_cmp8mm.dot  cfg._Z32__sanitizer_cov_trace_const_cmp1hh.dot  cfg._Z32__sanitizer_cov_trace_const_cmp2tt.dot  cfg._Z32__sanitizer_cov_trace_const_cmp4jj.dot  cfg._Z32__sanitizer_cov_trace_const_cmp8mm.dot  cfg.a.dot  cfg.main.dot  final.ll
LLVMPass/llvm-pass-skeleton/collectCMP/final_dot/: cfg._Z24__sanitizer_cov_trace_pcv.dot  cfg._Z26__sanitizer_cov_trace_cmp1hh.dot  cfg._Z26__sanitizer_cov_trace_cmp2tt.dot  cfg._Z26__sanitizer_cov_trace_cmp4jj.dot  cfg._Z26__sanitizer_cov_trace_cmp8mm.dot  cfg._Z28__sanitizer_cov_trace_strcmpPm.dot  cfg._Z28__sanitizer_cov_trace_strcmpPmS_.dot  cfg.a.dot  cfg.main.dot  final.ll  (+5 more)
LLVMPass/llvm-pass-skeleton/outputs/: fuzz_bitmap  fuzzer_stats  plot_data
LLVMPass/llvm-pass-skeleton/skeleton/: Skeleton.cpp
protobuf/rust-example/: Cargo.toml  build.rs
protobuf/rust-example/src/: main.rs
(+56 files in other folders)
