[package]
name = "rust-example"
version = "0.0.0"
authors = ["Jeff Garzik <jeff@bloq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.16.2"

[build-dependencies]
protoc-rust = "2.16.2"